Wizard color changed, and fixed few alignments of forms.

--- a/resources/htmls/bootstrap-kfupm-scss/_bootstrap-KFUPM.scss
+++ b/resources/htmls/bootstrap-kfupm-scss/_bootstrap-KFUPM.scss
@@ -15,7 +15,7 @@ $gray-800: #3B3B3B !default;
 $gray-900: #262626 !default;
 $black:    #000 !default;
 
-$green:   #26985E !default;
+$green:   #007d40 !default;
 $yellow:  #CBB481 !default;
 
 $primary:       $green !default;
