--- a/resources/htmls/css/main.css
+++ b/resources/htmls/css/main.css
@@ -8831,12 +8831,6 @@ body.admin-layout .side-nav {
   color: #CBB481;
 }
 
-.nav-pills .nav-link.active,
-.nav-pills .show > .nav-link {
-  color: #3B3B3B;
-  background-color: #D8D8D8;
-}
-
 /*@include border-radius(4px);*/
 /*@include transition(all, .2s, ease-in);*/
 /*@include box-shadow(0, 1px, 1px, rgba(0, 0, 0, 0.075), inset);*/
